--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,11 +2,11 @@
 
 <% if user_signed_in? %>
 
-    <%=  'home/index' %>
+    <%=  %>
 
     <% else %>
       <%= link_to 'users/sign_in' %>
 
   <% end %>
 
-  <%= link_to 'Sign Out', destroy_user_session_path(@user), class: "btn btn-primary btn-sm" %>
+  <%= button_to 'Sign Out', class: "btn btn-primary btn-sm" %>
